--- a/index.html
+++ b/index.html
@@ -1,14 +1,46 @@
-<html>
-<head>
-<style>
-h1 {
-  text-shadow: 2px 2px;
-}
-</style>
-</head>
-<body>
+ <html>
+  <head>
+  <style>
+  h2 {
+    color: red;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  }
+  </style>
+  </head>
+  <body>
+  
+  <head>
+  <style>
+  body { 
+    background: rgb(131, 148, 153) url("kindpng_538468.png") no-repeat fixed center; 
+  }
+  </style>
+  </head>
+  <body>
+  
+     <html>
+  <head>
+  <style>
+  h2 {
+    text-align: center;
+  }
+    </style>
+  </head>
+    
+  <html>
+  <head>
+    <head>
+      <style>
+      body { 
+        background: rgb(68, 174, 206) url("kindpng_538468.png") no-repeat fixed center; 
+      }
+      </style>
+      </head>
+      <body>
 
-<h1>manobrowner</h1>
-
-</body>
-</html>
+  <title style="font-size:50px;">MANOBROWNER.COM</title>           
+  </head>
+  <body>
+    <html>
+      <h2>site do manobrowner</h2>
+    </html>
