--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
   <style>
   h2 {
-    color: red;
+    color: rgba(255, 0, 0, 0.404);
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
   </style>
@@ -12,7 +12,7 @@
   <head>
   <style>
   body { 
-    background: rgb(131, 148, 153) url("kindpng_538468.png") no-repeat fixed center; 
+    background: rgb(131, 148, 153) url("manobrown.png") no-repeat fixed center; 
   }
   </style>
   </head>
@@ -32,7 +32,7 @@
     <head>
       <style>
       body { 
-        background: rgb(68, 174, 206) url("kindpng_538468.png") no-repeat fixed center; 
+        background: rgb(68, 174, 206) url("manobrown.png") no-repeat fixed center; 
       }
       </style>
       </head>
