--- a/index.html
+++ b/index.html
@@ -44,3 +44,45 @@
     <html>
       <h2>site do manobrowner</h2>
     </html>
+   <!DOCTYPE html>
+<html>
+<head>
+<style>
+div {
+  border: 1px solid gray;
+  padding: 8px;
+}
+
+h1 {
+  text-align: center;
+  text-transform: uppercase;
+  color: #4CAF50;
+}
+
+p {
+  text-indent: 50px;
+  text-align: justify;
+  letter-spacing: 3px;
+}
+
+a {
+  text-decoration: none;
+  color: #008CBA;
+}
+</style>
+</head>
+<body>
+
+<div>
+  <h1>Ingredientes </h1>
+  <p>1 caixa de leite condensado
+margarina sem sal
+1 colher (sopa) de margarina sem sal
+achocolatado
+7 colheres (sopa) de achocolatado ou 4 colheres (sopa) de chocolate em pó
+chocolate granulado
+</p>
+</div>
+
+</body>
+</html>
