--- a/index.html
+++ b/index.html
@@ -85,13 +85,8 @@ chocolate granulado
 </div>
 <div>
   <h1>Materiais</h1>
-  <p>1 caixa de leite condensado
-margarina sem sal
-1 colher (sopa) de margarina sem sal
-achocolatado
-7 colheres (sopa) de achocolatado ou 4 colheres (sopa) de chocolate em pó
-chocolate granulado
-</p>
+  <p>1 panela , 1  copo medidor
+1 espátuleta de silicone e por ultimo um prato raso </p>
 </div>
  
 </body>
