--- a/index.html
+++ b/index.html
@@ -75,12 +75,10 @@ a {
 
 <div>
   <h1>Ingredientes </h1>
-  <p>1 caixa de leite condensado
-margarina sem sal
-1 colher (sopa) de margarina sem sal
-achocolatado
-7 colheres (sopa) de achocolatado ou 4 colheres (sopa) de chocolate em pó
-chocolate granulado
+  <p>1 caixa de leite condensado, 
+1 colher (sopa) de margarina sem sal, 
+   7 colheres (sopa) de achocolatado ou 4 colheres (sopa) de chocolate em pó e 
+   chocolate granulado
 </p>
 </div>
 <div>
