--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@ a {
   <p>1 panela , 1  copo medidor
 1 espátuleta de silicone e por ultimo um prato raso </p>
 </div>
+ <div>
+  <h1>Modo de preparo</h1>
+  <p> Modo de preparo : 25min
+1 Em uma panela funda, acrescente o leite condensado, a margarina e o chocolate em pó.
+
+2 Cozinhe em fogo médio e mexa até que o brigadeiro comece a desgrudar da panela.
+
+ 3 Deixe esfriar e faça pequenas bolas com a mão passando a massa no chocolate granulado.</p>
+</div>
  
 </body>
 </html>
