--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ a {
 
  3 Deixe esfriar e faça pequenas bolas com a mão passando a massa no chocolate granulado.</p>
 </div>
- <h1 text-align: center> brownie</h1>
+ <h1 text-align: center, color:red;> brownie</h1>
  
 </body>
 </html>
