--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ a {
 </style>
 </head>
 <body>
-
+<h2> brigadeiro </h2>
 <div>
   <h1>Ingredientes </h1>
   <p>1 caixa de leite condensado, 
@@ -80,13 +80,10 @@ a {
    7 colheres (sopa) de achocolatado ou 4 colheres (sopa) de chocolate em pó e 
    chocolate granulado
 </p>
-</div>
-<div>
   <h1>Materiais</h1>
   <p>1 panela , 1  copo medidor
 1 espátuleta de silicone e por ultimo um prato raso </p>
-</div>
- <div>
+ 
   <h1>Modo de preparo</h1>
   <p> Modo de preparo : 25min
 1 Em uma panela funda, acrescente o leite condensado, a margarina e o chocolate em pó.
