--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@ a {
 1 espátuleta de silicone e por ultimo um prato raso </p>
  
   <h1>Modo de preparo</h1>
-  <p> Modo de preparo : 25min
-1 Em uma panela funda, acrescente o leite condensado, a margarina e o chocolate em pó.
+  <p> Modo de preparo : 25min</p>
+  <p>1 Em uma panela funda, acrescente o leite condensado, a margarina e o chocolate em pó.</p>
 
-2 Cozinhe em fogo médio e mexa até que o brigadeiro comece a desgrudar da panela.
+  <p>2 Cozinhe em fogo médio e mexa até que o brigadeiro comece a desgrudar da panela.</p>
 
- 3 Deixe esfriar e faça pequenas bolas com a mão passando a massa no chocolate granulado.</p>
+   <p>3 Deixe esfriar e faça pequenas bolas com a mão passando a massa no chocolate granulado.</p>
 </div>
 
 </body>
