--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,48 @@
 
+<html>
+  <head>
+  <style>
+  h2 {
+    color: rgba(255, 0, 0, 0.404);
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  }
+  </style>
+  </head>
+  <body>
+  
+  <head>
+  <style>
+  body { 
+    background: rgb(131, 148, 153) url("manobrown.png") no-repeat fixed left; 
+  }
+  </style>
+  </head>
+  <body>
+  
+     <html>
+  <head>
+  <style>
+  h2 {
+    text-align: left;
+  }
+    </style>
+  </head>
+    
+  <html>
+  <head>
+    <head>
+      <style>
+      body { 
+        background: rgb(68, 174, 206) url("manobrown.png") no-repeat fixed left; 
+      }
+      </style>
+      </head>
+      <body>
+
+  <title style="font-size:50px;">MANOBROWNER.COM</title>           
+  </head>
+  <body>
+    <html>
+      <h2>site do manobrowner</h2>
+    </html>
+   <!DOCTYPE html>
