--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <p><center>eae truta aqui é o nosso site de comercio aqui nos contamos sobre a nossas empresa e como fazer brigadeiro e brownie</center></p>
+   
   <style>
   h2 {
     color: rgba(255, 0, 0, 0.404);
@@ -48,6 +48,7 @@
    <!DOCTYPE html>
 <html>
 <head>
+  <p>eae truta aqui é o nosso site de comercio aqui nos contamos sobre a nossa empresa e receitas de como fazer brigadeiro e brownie</p>
 <style>
 div {
   border: 1px solid gray;
