--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    <!DOCTYPE html>
 <html>
 <head>
-  <p>eae truta aqui é o nosso site de comercio aqui nos contamos sobre a nossa empresa e receitas de como fazer brigadeiro e brownie e o dinheiro gastado da receita</p>
+  <p>eae truta aqui é o nosso site de comercio nos contamos sobre a nossa empresa e receitas de como fazer brigadeiro e brownie e o dinheiro gastado da receita</p>
 <style>
 div {
   border: 1px solid gray;
