--- a/pagina2.html
+++ b/pagina2.html
@@ -77,3 +77,19 @@
    <p>cheff manobrown</p>
    <img src="manobrowncheff.png" style="float:right;width:450px;height:560px;"> 
    <p>O cara que bota os mano pra trabalhar</p>
+    
+   <p>eduardo amorin</p>
+   <p>entrega os Ingredientes e vende nossos produtos </p>
+
+   <p>alana</p>
+   <p>ela faz os nossos produtos</p>
+
+   <p>gabriel yudi</p> 
+   <p>>entrega os Ingredientes e faz a cobrança</p>
+
+   <p>gustavo luder</p>
+   <p>>ele traz e vende nossos produtos</p>
+
+   <p>felipe</p>
+   <p>>entrega os Ingredientes e faz a cobrança</p>
+
