--- a/pagina2.html
+++ b/pagina2.html
@@ -1,4 +1,3 @@
-
 <html>
   <head>
   <style>
@@ -77,12 +76,12 @@
    <p>cheff manobrown</p>
    <img src="manobrowncheff.png" style="float:right;width:450px;height:560px;"> 
    <p>O cara que bota os mano pra trabalhar</p>
- 
+
    <p style="color:blue"> eduardo amorin</p>
    <p>entrega os Ingredientes e vende nossos produtos </p>
 
    <p style="color:pink">alana</p>
-   <p>ela faz os nossos produtos</p>
+   <p>ela faz os nossos produtos e faz propagando do nosso produto</p>
 
    <p style="color:blue">gabriel yudi</p> 
    <p>>entrega os Ingredientes e faz a cobrança</p>
@@ -90,7 +89,9 @@
    <p style="color:blue">gustavo luder</p>
    <p>>ele traz e vende nossos produtos</p>
 
-   <p style="color:blue">felipe</p>
+   <p style="color:blue">felipe garcia</p>
    <p>entrega os Ingredientes e faz a cobrança</p>
-
-
+   
+   <h1>fonte de renda</h1>
+   <p> cada membro membro do grupo (gustavo l. , eduardo, felipe s. e gabriel y.) ficará responsaveis por trazer os seguintes produtos</p>
+  <p style="color:red">leite condensado, achocolatado, granulado e a embalagem,</p> <p>para a responsável por fazer os produtos da barraca "mano brownie". e a mesma ficará responsável por cobrir os custos dos outros ingredientes das receitas.</p>
