--- a/pagina3.html
+++ b/pagina3.html
@@ -106,12 +106,12 @@
       <div class="desc">2,00 á unidade</div>
     </div>
     
-    <div class="gallery">
+   <center> <div class="gallery">
       <a target="_blank" href="img_forest.jpg">
         <img src="brownie.png" alt="Forest" width="6000" height="4000">
       </a>
       <div class="desc">6,00 á unidade</div>
-    </div>
+    </div></center>
     
     <a href="index.html"><input type="button" value="1"></a> <a href="pagina2.html"><input type="button" value="2"></a> <a href="pagina3.html"><input type="button" value="3"></a>
     </body>
