--- a/index.html
+++ b/index.html
@@ -138,5 +138,5 @@ a {
     <p>6 Leve ao forno a 180° C por 30 minutos</p>
 </div>
 <body>
-      <a href="index.html"><input type="button" value="1"></a> <a href="pagina2.html"><input type="button" value="2"></a> <a href="pagina3.html"><input type="button" value="3"></a>
+      <a href="index.html"><input type="button" value="receitas"></a> <a href="pagina2.html"><input type="button" value="informações"></a> <a href="pagina3.html"><input type="button" value="quanto vai custar"></a>
 </body>
