--- a/pagina2.html
+++ b/pagina2.html
@@ -96,4 +96,4 @@
    <p> cada membro membro do grupo (gustavo l. , eduardo, felipe s. e gabriel y.) ficará responsaveis por trazer os seguintes produtos</p>
   <p style="color:red">leite condensado, achocolatado, granulado e a embalagem,</p> <p>para a responsável por fazer os produtos da barraca "mano brownie". e a mesma ficará responsável por cobrir os custos dos outros ingredientes das receitas.</p>
 
-       <a href="index.html"><input type="button" value="1"></a> <a href="pagina2.html"><input type="button" value="2"></a> <a href="pagina3.html"><input type="button" value="3"></a>
+       <a href="index.html"><input type="button" value="receitas"></a> <a href="pagina2.html"><input type="button" value="informações"></a> <a href="pagina3.html"><input type="button" value="valor"></a>
