--- a/pagina3.html
+++ b/pagina3.html
@@ -113,6 +113,6 @@
       <div class="desc">6,00 á unidade</div>
     </div></right>
     
-    <a href="index.html"><input type="button" value="1"></a> <a href="pagina2.html"><input type="button" value="2"></a> <a href="pagina3.html"><input type="button" value="3"></a>
+    <a href="index.html"><input type="button" value="receias"></a> <a href="pagina2.html"><input type="button" value="informações"></a> <a href="pagina3.html"><input type="button" value="valor"></a>
     </body>
     </html>
