--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ p {
   text-align: right;
   letter-spacing: 3px;
   font-size: 30;
-  text-shadow: 2px 2px whit;
+  text-shadow: 2px 2px white;
 }
 
 h3{ text-align:right;
