--- a/pagina2.html
+++ b/pagina2.html
@@ -84,10 +84,10 @@
    <p>ela faz os nossos produtos e faz propagando do nosso produto</p>
 
    <p style="color:blue">gabriel yudi</p> 
-   <p>>entrega os Ingredientes e faz a cobrança</p>
+   <p>entrega os Ingredientes e faz a cobrança</p>
 
    <p style="color:blue">gustavo luder</p>
-   <p>>ele traz e vende nossos produtos</p>
+   <p>ele traz e vende nossos produtos</p>
 
    <p style="color:blue">felipe garcia</p>
    <p>entrega os Ingredientes e faz a cobrança</p>
